Fixed: header logo and its size

--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="assets/geolabIcon.png" />
+    <link rel="icon" type="image/x-icon" href="assets/GeoLab.svg" />
     <title>ჯეოლაბი სკოლაში</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
     <header>
-      <div>
-        <img src="assets/geolabIcon.png" alt="GeoLab" class="header-logo" />
-      </div>
-      <p class="header-title">
-       ჯეოლაბი <span class="header-title-different ">სკოლაში</span> 
-      </p>
+      <img src="assets/GeoLab.svg" alt="GeoLab" class="header-logo" />
     </header>
-
     <main>
       <section>
         <span id="header-paragraph">
@@ -82,15 +76,16 @@
         </span>
         <ul class="ul">
           <li class="li">
-            ანანო ჯობუა -
+            ანანო ჯაბუა -
             <a
               href="https://drive.google.com/file/d/1APAnIi1VmVj6FK8eVg-cmn1i62szshF1/view?usp=sharing"
               target="_blank"
               >UI/UX და Figma</a
             >
           </li>
+
           <li class="li">
-            ბაბი კვარაცხელია -
+            ბარბარე კვარაცხელია -
             <a
               href="https://drive.google.com/file/d/1fG76SZvYYyMqHPiY24LjRs8kxLCFNou1/view?usp=sharing"
               target="_blank"
@@ -156,7 +151,7 @@
           <li class="li">
             ელენე ყეინიშვილი -
             <a
-              href="https://drive.google.com/file/d/1mLZPdTCTdLuXSav5XsLbWKZzM1wmltD5/view?usp=sharing"
+              href="https://drive.google.com/file/d/1eAcrPUxpRUriwB5ss1Ors09KaztRLQyD/view?usp=sharing"
               target="_blank"
               >გრაფიკული დიზაინი</a
             >
@@ -175,6 +170,14 @@
               href="https://drive.google.com/file/d/1nE6ApnXbUXkUKLkUTkyRjBqsKYCuA6pg/view?usp=sharing"
               target="_blank"
               >ფრონტენდ დეველოპმენტი : HTML, CSS</a
+            >
+          </li>
+          <li class="li">
+            მარიამ ბერულავა -
+            <a
+              href="https://drive.google.com/file/d/1NpyUIUKCmrQ-NbTnRNghlghHT7kJMUac/view?usp=sharing"
+              target="_blank"
+              >პროგრამირების შემეცნებითი ტრენინგი</a
             >
           </li>
           <li class="li">
